--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.etsy.android.grid:library:1.0.5' // see changelog
-
+    compile files('libs\\ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
 
     compile project(':facebook')
 
