--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.etsy.android.grid:library:1.0.5' // see changelog
     compile files('libs\\ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
+    compile 'com.getbase:floatingactionbutton:1.9.0'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
+
 
     compile project(':facebook')
 
