--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sinapp.sharathsind.tradepost"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -23,12 +23,10 @@
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
-    <uses-permission
-        android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
@@ -37,10 +35,7 @@
         android:allowBackup="true"
         android:icon="@drawable/sample_img"
         android:label="@string/app_name"
-        android:theme="@style/CustomActionBarTheme"
-
-
-        >
+        android:theme="@style/CustomActionBarTheme" >
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
@@ -48,25 +43,21 @@
         <activity
             android:name=".Welcome"
             android:label="@string/app_name"
-            android:theme="@style/NoActionBar"
-            >
+            android:theme="@style/NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".FirstTime"
             android:label="@string/title_activity_first_time"
-            android:theme="@style/NoActionBar"
-
-            >
-
+            android:theme="@style/NoActionBar" >
         </activity>
         <activity
             android:name=".SignInEmail"
-            android:label="@string/title_activity_sign_in_email">
-
+            android:label="@string/title_activity_sign_in_email" >
         </activity>
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -75,62 +66,51 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
-            android:windowSoftInputMode="stateHidden"
             android:theme="@style/NoActionBar"
-            >
-
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name=".ToolBar"
-            android:label="@string/title_activity_tool_bar">
-
+            android:label="@string/title_activity_tool_bar" >
         </activity>
         <activity
             android:name=".LoginActivity1"
             android:label="@string/title_activity_login_activity1"
-            android:windowSoftInputMode="stateHidden"
             android:theme="@style/NoActionBar"
-            >
-
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main">
-
+            android:label="@string/title_activity_main" >
         </activity>
         <activity
             android:name=".NewToolBar"
-            android:label="@string/title_activity_main">
-
+            android:label="@string/title_activity_main" >
         </activity>
         <activity
             android:name=".MarketPlaceActivity"
-            android:label="Market Place"
-            >
-
+            android:label="Market Place" >
         </activity>
-
         <activity
             android:name=".WebServiceActivityTest"
-            android:label="Test Activity">
-
+            android:label="Test Activity" >
         </activity>
-
         <activity
             android:name=".ChatActivity"
             android:label="Chat"
-            android:windowSoftInputMode="stateHidden"
-            >
-
+            android:windowSoftInputMode="stateHidden" >
         </activity>
-
         <activity
             android:name=".ListingProcessActivity"
             android:label="Chat"
-            android:windowSoftInputMode="stateHidden"
-            >
-
+            android:windowSoftInputMode="stateHidden" >
         </activity>
+
+        <receiver
+            android:name=".GCMReciever"
+            android:enabled="true"
+            android:exported="true" >
+        </receiver>
     </application>
 
 </manifest>
