--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,13 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.google.android.gms:play-services:7.5.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.etsy.android.grid:library:1.0.5' // see changelog
     compile files('libs\\ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
     compile 'com.getbase:floatingactionbutton:1.9.0'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
-
+    apply plugin: 'com.google.gms.google-services'
 
     compile project(':facebook')
 
