Added new google play services

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,10 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-    <permission android:name="com.example.gcm.permission.C2D_MESSAGE"
+    <permission
+        android:name="com.example.gcm.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
+
     <uses-permission android:name="com.sinapp.sharathsind.tradepost.permission.C2D_MESSAGE" />
 
     <application
@@ -98,7 +100,6 @@
             android:name=".MarketPlaceActivity"
             android:label="Market Place" >
         </activity>
-        
         <activity
             android:name=".ChatActivity"
             android:label="Chat"
@@ -109,20 +110,41 @@
             android:label="Chat"
             android:windowSoftInputMode="stateHidden" >
         </activity>
+
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="com.example.gcm" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="com.sinapp.sharathsind.tradepost" />
             </intent-filter>
         </receiver>
+
+        <service
+            android:name="services.GCMService"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
+
         <receiver
             android:name=".GCMReciever"
             android:enabled="true"
             android:exported="true" >
         </receiver>
+
+        <service
+            android:name="services.IDService"
+            android:enabled="true"
+            android:exported="false" >
+          <intent-filter>
+              <action android:name="com.google.android.gms.iid.InstanceID"/>
+          </intent-filter>
+        </service>
     </application>
 
 </manifest>
