Updates: -Single Listing Activity (template only, still need to work on)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,6 +111,13 @@
             android:windowSoftInputMode="stateHidden" >
         </activity>
 
+        <activity
+            android:name=".SingleListingActivity"
+            android:label="Listing"
+            >
+
+        </activity>
+
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
