--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile files('libs\\ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'org.apmem.tools:layouts:1.9@aar'
+
     apply plugin: 'com.google.gms.google-services'
 
 
