Updates: -OfferActivity renamed to OfferProcessActivity. -listview showing item titles and checkbox. -display the selected titles from listing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,7 +97,7 @@
         </activity>
 
         <activity
-            android:name=".OfferActivity"
+            android:name=".OfferProcessActivity"
             android:label="Offer"
 
             >
