--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 22
     buildToolsVersion "21.1.2"
 
     defaultConfig {
@@ -35,21 +35,10 @@ dependencies {
     compile 'org.apmem.tools:layouts:1.9@aar'
     compile 'com.wrapp.floatlabelededittext:library:0.0.6'
     compile 'de.hdodenhof:circleimageview:1.3.0'
-    compile 'com.etsy.android.grid:library:1.0.5' // see changelog
+    compile 'com.etsy.android.grid:library:1.0.5'
+    // see changelog
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.+'
     compile 'com.mcxiaoke.volley:library:1.0.15'
-
-
-
-
-
-
-
-
-
     apply plugin: 'com.google.gms.google-services'
-
-
     compile project(':facebook')
-
 }
