Update: - added ProfileActivity with sample feedback UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,7 +110,12 @@
 
         <activity
             android:name=".NavigationDrawer"
-            android:label="Offer"
+            >
+
+        </activity>
+
+        <activity
+            android:name=".ProfileActivity"
             >
 
         </activity>
