--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,8 +102,7 @@
 
         <activity
             android:name=".OfferProcessActivity"
-            android:label="Offer"
-
+            android:windowSoftInputMode="stateHidden"
             >
 
         </activity>
