--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
         applicationId "com.sinapp.sharathsind.tradepost"
@@ -29,7 +29,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.google.android.gms:play-services:7.5.+'
-    compile files('libs\\ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
+
+    
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'org.apmem.tools:layouts:1.9@aar'
