Update: - replace marektplace recyclerview to staggeredgridview by etsy

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -169,6 +169,11 @@
             </intent-filter>
         </service>
 
+        <!-- Declaring Service in Manifest -->
+        <service
+            android:name="services.MarketPlaceIntentService"
+            android:exported="false" />
+
         <activity
             android:name=".PictureMsg"
             android:label="@string/title_activity_picture_msg" >
