update the badge for chat and notification icon in action bar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,8 +128,10 @@
             >
 
         </activity>
-<activity android:name=".notificationoffertesting"
-    android:screenOrientation="portrait"/>
+        <activity
+            android:name=".notificationoffertesting"
+            android:theme="@style/NoActionBar"
+            android:screenOrientation="portrait"/>
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
