update: added EditActivity (the image part still need to be complete)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -203,6 +203,14 @@
             android:screenOrientation="portrait"
             >
         </activity>
+
+        <activity
+            android:name=".EditListingActivity"
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+
     </application>
 
 </manifest>
