--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,14 @@
 
     <!-- To retrieve the account name (email) as part of sign-in: -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
@@ -48,12 +48,9 @@
         android:allowBackup="true"
         android:icon="@drawable/sample_img"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
         android:largeHeap="true"
         android:screenOrientation="portrait"
-
-
-        >
+        android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
@@ -61,9 +58,8 @@
         <activity
             android:name=".Welcome"
             android:label="@string/app_name"
-            android:theme="@style/NoActionBar"
             android:screenOrientation="portrait"
-            >
+            android:theme="@style/NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -73,15 +69,13 @@
         <activity
             android:name=".FirstTime"
             android:label="@string/title_activity_first_time"
-            android:theme="@style/NoActionBar"
             android:screenOrientation="portrait"
-            >
+            android:theme="@style/NoActionBar" >
         </activity>
         <activity
             android:name=".SignInEmail"
             android:label="@string/title_activity_sign_in_email"
-            android:screenOrientation="portrait"
-            >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -90,51 +84,38 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login_activity1"
-            android:theme="@style/NoActionBar"
             android:screenOrientation="portrait"
+            android:theme="@style/NoActionBar"
             android:windowSoftInputMode="stateHidden" >
         </activity>
-
         <activity
             android:name=".ListingProcessActivity"
             android:label="Listing"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" >
         </activity>
-
         <activity
             android:name=".SingleListingActivity"
             android:label="Listing"
-            android:screenOrientation="portrait"
-            >
-
+            android:screenOrientation="portrait" >
         </activity>
-
         <activity
             android:name=".OfferProcessActivity"
-            android:windowSoftInputMode="stateHidden"
             android:screenOrientation="portrait"
-            >
-
+            android:windowSoftInputMode="stateHidden" >
         </activity>
-
         <activity
             android:name=".NavigationDrawer"
-            android:screenOrientation="portrait"
-            >
-
+            android:screenOrientation="portrait" >
         </activity>
-
         <activity
             android:name=".ProfileActivity"
-            android:screenOrientation="portrait"
-            >
-
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".notificationoffertesting"
-            android:theme="@style/NoActionBar"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBar" />
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
@@ -143,16 +124,13 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
                 <category android:name="com.sinapp.sharathsind.tradepost" />
             </intent-filter>
         </receiver>
 
         <service
-
-            android:name="com.sinapp.sharathsind.tradepost.GCMService"
-
-
-
+            android:name=".GCMService"
             android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
@@ -183,41 +161,37 @@
             android:name=".PictureMsg"
             android:label="@string/title_activity_picture_msg" >
         </activity>
-
         <activity
             android:name=".CreateAccountActivity"
-            android:theme="@style/NoActionBar"
             android:screenOrientation="portrait"
-            >
+            android:theme="@style/NoActionBar" >
         </activity>
-
         <activity
             android:name=".CreateAccountPicActivity"
-            android:theme="@style/NoActionBar"
             android:screenOrientation="portrait"
-            >
+            android:theme="@style/NoActionBar" >
         </activity>
-
         <activity
             android:name=".ListingProcessDoneActivity"
-            android:theme="@style/NoActionBar"
             android:screenOrientation="portrait"
-            >
+            android:theme="@style/NoActionBar" >
         </activity>
         <activity
             android:name=".ChatFragment"
-            android:theme="@style/AppTheme"
             android:screenOrientation="portrait"
-            >
+            android:theme="@style/AppTheme" >
         </activity>
-
         <activity
             android:name=".EditListingActivity"
-            android:theme="@style/AppTheme"
             android:screenOrientation="portrait"
-            >
+            android:theme="@style/AppTheme" >
         </activity>
 
+        <receiver
+            android:name=".MessageReceiver"
+            android:enabled="true"
+            android:exported="true" >
+        </receiver>
     </application>
 
 </manifest>
