--- a/facebook/build.gradle
+++ b/facebook/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 
 android {
     compileSdkVersion 21
-    buildToolsVersion"22.0."
+    buildToolsVersion"22.0.1"
 
     defaultConfig {
         minSdkVersion 14
