--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/sample_img"
+        android:icon="@drawable/tradepost_logo"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:screenOrientation="portrait"
