--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,6 @@ android {
         versionName "1.0"
 
 
-
-
     }
     buildTypes {
         release {
@@ -28,8 +26,10 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:design:23.0.1'
 
+    compile project(':facebook')
+
+    compile 'com.android.support:design:23.0.1'
     compile 'com.android.support:support-v4:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.android.support:cardview-v7:23.0.1'
@@ -40,8 +40,6 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.15'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.wefika:flowlayout:0.4.0'
-    compile project(':facebook')
-    compile 'com.google.android.gms:play-services:7.5+'
+    compile 'com.google.android.gms:play-services:8.1.0'
     compile 'com.android.support:appcompat-v7:23.0.1'
-
 }
